grub: Fix drop shadow in logo.
As discussed on the mailing list, the previous shadows removed the
original illusion of twist in the logo. See:

https://lists.gnu.org/archive/html/guix-devel/2015-02/msg00460.html

--- a/grub/README
+++ b/grub/README
@@ -10,5 +10,5 @@ of 16:9.
 Copying
 -------
 
-See the file metadata for information about authors and copyright. If you are
+See the files metadata for information about authors and copyright. If you are
 using Inkscape, you can access the Document metadata from the File menu.
