--- a/website/README
+++ b/website/README
@@ -1,21 +1,28 @@
-Website Graphics
-================
+-*- mode: org -*-
 
-The files in this directory are intended to be used as assets for the GuixSD
-website.
+#+TITLE: GuixSD website
 
-- The www directory is an HTML implementation of the techie mockup. Links assume
-  "/software/guix" is the root directory of the website.
-- mockup.svg illustrates a homepage aimed at average users. This is for use
-  when GuixSD is getting closer to a production-ready system.
-- mockup-techie.svg illustrates a homepage aimed at skilled devs and sysadmins.
-  This is for use during the alpha phase of development.
+The files in this directory are intended to be used as assets for the [[https://www.gnu.org/software/guix][GuixSD
+website]] which is implemented in [[https://www.gnu.org/software/guile][Guile]] Scheme.
 
+  - =www.scm= and =www= provides ‘(www)’ guile module which offers services for
+    building the website locally.
+  - =static= contains images and css for the website.
+  - =mockup.svg= illustrates a homepage aimed at average users.  This is for use
+    when GuixSD is getting closer to a production-ready system.
+  - =mockup-techie.svg= illustrates a homepage aimed at skilled devs and
+    sysadmins.  This is for use during the alpha phase of development.
 
-Copying
--------
+* Building
 
-Public domain 2015 Luis Felipe López Acevedo <felipe.lopez@openmailbox.org>
+In this implementation, links assume =/software/guix= is the root directory of
+the website.  In order to build the website on your machine, you will want to
+modify the values of ‘(current-url-root)’ and ‘(gnu.org-root)’ parameter
+objects.
+
+* Copying
+
+Public domain 2015 [[mailto:felipe.lopez@openmailbox.org][Luis Felipe López Acevedo]]
 
 All the graphics in this directory are dedicated to the public domain, except
 for the Guix System Distribution logo, which can be used under the Creative
