website: Apply GNU AGPL licence.
* website/COPYING: New File.
* website/README: Document it.
* website/www.scm: Attach licence notice.
* website/www/about.scm: Likewise.
* website/www/contribute.scm: Likewise.
* website/www/donate.scm: Likewise.
* website/www/download.scm: Likewise.
* website/www/help.scm: Likewise.
* website/www/packages.scm: Likewise.
* website/www/utils.scm: Likewise.
* website/www/shared.scm: Likewise.
  (html-page-footer): Conform to it.

--- a/website/README
+++ b/website/README
@@ -22,6 +22,12 @@ objects.
 
 * Copying
 
+** Guile code
+
+See [[file:COPYING][COPYING]].
+
+** Graphics
+
 Public domain 2015 [[mailto:felipe.lopez@openmailbox.org][Luis Felipe López Acevedo]]
 
 All the graphics in this directory are dedicated to the public domain, except
