website: packages: Fix invalid HTML (bug #22115).
* README (Building and running special pages): Correct environment
variable.

* www/packages.scm (packages-page): Move update date to the top of the
page.
(package->sxml): Use ID instead of NAME attribute for anchors, and
move out DIV element from P element, which is invalid.

--- a/website/README
+++ b/website/README
@@ -52,7 +52,7 @@ built using *Haunt*. To build them, and try them out locally, do the
 following:
 
 1. Add the directory containing the source code of GNU Guix to the
-   ~PATH~ environment variable.
+   ~GUILE_LOAD_PATH~ environment variable.
 2. Build the part of the website that builds with *Haunt*:
 
    #+BEGIN_EXAMPLE
